--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
     <module>nuxeo-platform-rendition</module>
     <module>nuxeo-platform-replication</module>
     <module>nuxeo-apidoc-server</module>
-    <module>nuxeo-shell-ejb</module>
+    <!-- <module>nuxeo-shell-ejb</module> -->
   </modules>
 
   <repositories>
