NXP-7047: fix colors for foldable box nofold titles

--- a/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/galaxy-colors.properties
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/galaxy-colors.properties
@@ -8,7 +8,7 @@ header.mainTabsSelected=#000000
 breadcrumblink=#666666
 titles=#5c5c5c
 summary.titles=#848484
-foldablebox.titles=#ffffff
+foldablebox.titles=#333333
 foldablebox.titlesDisabled=#555555
 foldablebox.actions=#333333
 foldablelightbox.titles=#666666
