--- a/nuxeo-distribution-resources/src/main/resources/bin/nuxeo.conf
+++ b/nuxeo-distribution-resources/src/main/resources/bin/nuxeo.conf
@@ -26,6 +26,7 @@ nuxeo.force.generation=true
 #nuxeo.templates=default
 #nuxeo.bind.address=0.0.0.0
 #nuxeo.url=http://localhost:8080/nuxeo
+#nuxeo.loopback.url=http://localhost:8080/nuxeo
 #org.nuxeo.ecm.contextPath=/nuxeo
 
 #org.nuxeo.ecm.product.name=
