--- a/pom.xml
+++ b/pom.xml
@@ -4,17 +4,17 @@
  <parent>
   <groupId>org.nuxeo.ecm.platform</groupId>
   <artifactId>nuxeo-features-parent</artifactId>
-  <version>5.4.2-SNAPSHOT</version>
+  <version>5.4.2</version>
  </parent>
  <groupId>org.nuxeo.ecm.platform</groupId>
  <artifactId>nuxeo-platform-signature-parent</artifactId>
  <name>Nuxeo Platform Signature Parent</name>
  <description>Nuxeo Platform Digital Signature Parent</description>
  <packaging>pom</packaging>
- <version>5.4.2-SNAPSHOT</version>
+ <version>5.4.2</version>
  <properties>
-  <nuxeo.platform.version>5.4.2-SNAPSHOT</nuxeo.platform.version>
-  <nuxeo.platform.signature.version>5.4.2-SNAPSHOT</nuxeo.platform.signature.version>
+  <nuxeo.platform.version>5.4.2</nuxeo.platform.version>
+  <nuxeo.platform.signature.version>5.4.2</nuxeo.platform.signature.version>
  </properties>
 
  <modules>
