--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.core</groupId>
     <artifactId>nuxeo-core-parent</artifactId>
-    <version>5.4.2</version>
+    <version>5.4.3-SNAPSHOT</version>
   </parent>
 
   <artifactId>nuxeo-core-binarymanager-s3</artifactId>
