--- a/pom.xml
+++ b/pom.xml
@@ -1091,12 +1091,23 @@
         <version>1.5.0</version>
         <scope>provided</scope>
       </dependency>
+      <!-- deprecated - you must use jackson -->
       <dependency>
         <groupId>net.sf.json-lib</groupId>
         <artifactId>json-lib</artifactId>
         <version>2.2.1</version>
         <scope>provided</scope>
         <classifier>jdk15</classifier>
+      </dependency>
+      <dependency>
+        <groupId>org.codehaus.jackson</groupId>
+        <artifactId>jackson-core-asl</artifactId>
+        <version>1.8.1</version>
+      </dependency>
+      <dependency>
+        <groupId>org.codehaus.jackson</groupId>
+        <artifactId>jackson-mapper-asl</artifactId>
+        <version>1.8.1</version>
       </dependency>
       <dependency>
         <groupId>net.sf.ezmorph</groupId>
