NXP-7102 - refactored automation client to use jackson json parser

--- a/nuxeo-automation/nuxeo-automation-client/pom.xml
+++ b/nuxeo-automation/nuxeo-automation-client/pom.xml
@@ -12,15 +12,12 @@
   <description>Automation Client for automation REST API.</description>
   <dependencies>
     <dependency>
-      <groupId>net.sf.json-lib</groupId>
-      <artifactId>json-lib</artifactId>
-      <classifier>jdk15</classifier>
-      <scope>compile</scope>
+      <groupId>org.codehaus.jackson</groupId>
+      <artifactId>jackson-core-asl</artifactId>
     </dependency>
     <dependency>
-      <groupId>net.sf.ezmorph</groupId>
-      <artifactId>ezmorph</artifactId>
-      <scope>compile</scope>
+      <groupId>org.codehaus.jackson</groupId>
+      <artifactId>jackson-mapper-asl</artifactId>
     </dependency>
 
     <dependency>
