--- a/pom.xml
+++ b/pom.xml
@@ -818,6 +818,12 @@
         <artifactId>jetty</artifactId>
         <version>${jetty.mortbay.version}</version>
         <scope>provided</scope>
+	<exclusions>
+	  <exclusion>
+	    <groupId>org.mortbay.jetty</groupId>
+	    <artifactId>servlet-api-2.5</artifactId>
+	  </exclusion>
+	</exclusions>
       </dependency>
       <dependency>
         <groupId>org.mortbay.jetty</groupId>
