--- a/pom.xml
+++ b/pom.xml
@@ -90,5 +90,9 @@
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
     </dependency>
+    <dependency>
+      <groupId>commons-collections</groupId>
+      <artifactId>commons-collections</artifactId>
+    </dependency>
   </dependencies>
 </project>
