--- a/nuxeo-opensocial-features/build.xml
+++ b/nuxeo-opensocial-features/build.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0"?>
-<project name="nuxeo-opensocial-features" default="deploy-webengine" basedir=".">
+<project name="nuxeo-opensocial-features"
+         default="deploy-webengine"
+         basedir=".">
 
   <!-- From the pom.xml -->
   <property name="name" value="nuxeo-opensocial-features" />
@@ -18,7 +20,7 @@
   <property name="deploy.dir" value="${jboss.dir}/server/default/deploy" />
   <property name="nuxeo.ear" value="nuxeo.ear" />
   <property name="mvn.opts" value="" />
-  <property name="webengine.bundle.dir" value="${tomcat.dir}/bundles"/>
+  <property name="webengine.bundle.dir" value="${tomcat.dir}/bundles" />
 
   <condition property="osfamily-unix">
     <os family="unix" />
@@ -27,11 +29,17 @@
     <os family="windows" />
   </condition>
 
-  <target name="deploy" depends="install,copy" description="Build and copy to JBoss" />
-	
-  <target name="deploy-webengine" depends="install,copy-webengine" description="Build and copy to Web Engine"/>
+  <target name="deploy"
+          depends="install,copy"
+          description="Build and copy to JBoss" />
 
-  <target name="install" depends="install-unix,install-windows" description="Build" />
+  <target name="deploy-webengine"
+          depends="install,copy-webengine"
+          description="Build and copy to Web Engine" />
+
+  <target name="install"
+          depends="install-unix,install-windows"
+          description="Build" />
   <target name="install-unix" if="osfamily-unix">
     <exec executable="mvn" failonerror="true">
       <arg value="install" />
@@ -49,7 +57,7 @@
 
   <target name="copy" description="Copy files to JBoss">
     <echo message="${name}" />
-	<copy todir="${deploy.dir}/${nuxeo.ear}/system/" overwrite="true">
+    <copy todir="${deploy.dir}/${nuxeo.ear}/system/" overwrite="true">
       <fileset dir="${build.dir}" casesensitive="yes">
         <include name="${name}-*.jar" />
         <exclude name="${name}-*-sources.jar" />
@@ -60,15 +68,17 @@
 
   <target name="copy-webengine" description="Copy files to webengine">
     <echo message="${name}" />
-	<copy todir="${webengine.bundle.dir}/" overwrite="true">
-  	  <fileset dir="${build.dir}" casesensitive="yes">
-  	    <include name="${name}-*.jar"/>
-  	    <exclude name="${name}-*-sources.jar"/>
-  	  </fileset>
-	</copy>
+    <copy todir="${webengine.bundle.dir}/" overwrite="true">
+      <fileset dir="${build.dir}" casesensitive="yes">
+        <include name="${name}-*.jar" />
+        <exclude name="${name}-*-sources.jar" />
+      </fileset>
+    </copy>
   </target>
 
-  <target name="eclipseeclipse" depends="eclipseeclipse-unix,eclipseeclipse-windows" description="Build" />
+  <target name="eclipseeclipse"
+          depends="eclipseeclipse-unix,eclipseeclipse-windows"
+          description="Build" />
   <target name="eclipseeclipse-unix" if="osfamily-unix">
     <exec executable="mvn" failonerror="true">
       <arg value="eclipse:eclipse" />
