--- a/nuxeo-webengine-gadgets/build.xml
+++ b/nuxeo-webengine-gadgets/build.xml
@@ -18,7 +18,8 @@
   <property name="deploy.dir" value="${jboss.dir}/server/default/deploy" />
   <property name="nuxeo.ear" value="nuxeo.ear" />
   <property name="mvn.opts" value="" />
-  <property name="lm.portal.dir.web.module" value="${lm.portal.dir}/web/modules/org.nuxeo.opensocial.spaces" />
+  <property name="lm.portal.dir.web.module"
+            value="${lm.portal.dir}/web/modules/org.nuxeo.opensocial.spaces" />
   <property name="webeng.dir" value="${jboss.dir}/server/default/deploy" />
 
   <condition property="osfamily-unix">
@@ -28,9 +29,13 @@
     <os family="windows" />
   </condition>
 
-  <target name="deploy" depends="install,copy" description="Build and copy to JBoss" />
+  <target name="deploy"
+          depends="install,copy"
+          description="Build and copy to JBoss" />
 
-  <target name="install" depends="install-unix,install-windows" description="Build" />
+  <target name="install"
+          depends="install-unix,install-windows"
+          description="Build" />
   <target name="install-unix" if="osfamily-unix">
     <exec executable="mvn" failonerror="true">
       <arg value="install" />
@@ -58,7 +63,9 @@
     <!-- Could copy other files to .../config too -->
   </target>
 
-  <target name="eclipseeclipse" depends="eclipseeclipse-unix,eclipseeclipse-windows" description="Build" />
+  <target name="eclipseeclipse"
+          depends="eclipseeclipse-unix,eclipseeclipse-windows"
+          description="Build" />
   <target name="eclipseeclipse-unix" if="osfamily-unix">
     <exec executable="mvn" failonerror="true">
       <arg value="eclipse:eclipse" />
