NXP-7107 - exclude nuxeo-distribution-tools

--- a/nuxeo-opensocial-container/pom.xml
+++ b/nuxeo-opensocial-container/pom.xml
@@ -47,6 +47,10 @@
           <groupId>com.google.code.guice</groupId>
           <artifactId>guice</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>org.nuxeo.build</groupId>
+          <artifactId>nuxeo-distribution-tools</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
 
