--- a/nuxeo-webengine-gwt/pom.xml
+++ b/nuxeo-webengine-gwt/pom.xml
@@ -42,6 +42,7 @@
     This artifact is required only in gwt dev mode - to launch a nuxeo server.
     It is not required at runtime in web mode
      -->
+    <!-- Is this still needed ? seems that distribution tool launcher is quite deprecated -->
     <dependency>
       <groupId>org.nuxeo.build</groupId>
       <artifactId>nuxeo-distribution-tools</artifactId>
