--- a/nuxeo-platform-webapp-core/pom.xml
+++ b/nuxeo-platform-webapp-core/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-dm-parent</artifactId>
-    <version>5.4.2</version>
+    <version>5.4.2.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>nuxeo-platform-webapp-core</artifactId>
