--- a/nuxeo-platform-ui-web-test/pom.xml
+++ b/nuxeo-platform-ui-web-test/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-jsf-parent</artifactId>
-    <version>5.4.2</version>
+    <version>5.4.2.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>nuxeo-platform-ui-web-test</artifactId>
