--- a/nuxeo-distribution-cap-tests/pom.xml
+++ b/nuxeo-distribution-cap-tests/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.distribution</groupId>
     <artifactId>nuxeo-distribution</artifactId>
-    <version>5.4.2</version>
+    <version>5.4.2.1-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
