--- a/nuxeo-platform-directory/nuxeo-platform-directory-facade/pom.xml
+++ b/nuxeo-platform-directory/nuxeo-platform-directory-facade/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-platform-directory-parent</artifactId>
-    <version>5.4.2</version>
+    <version>5.4.2.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>nuxeo-platform-directory-facade</artifactId>
