--- a/nuxeo-platform-search-facade/pom.xml
+++ b/nuxeo-platform-search-facade/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-services-parent</artifactId>
-    <version>5.4.2</version>
+    <version>5.4.2.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>nuxeo-platform-search-facade</artifactId>
