--- a/nuxeo-opencmis-impl/pom.xml
+++ b/nuxeo-opencmis-impl/pom.xml
@@ -10,7 +10,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.core</groupId>
     <artifactId>nuxeo-chemistry</artifactId>
-    <version>5.4.1.1-SNAPSHOT</version>
+    <version>5.4.1.1-HF05</version>
   </parent>
 
   <artifactId>nuxeo-opencmis-impl</artifactId>
@@ -18,7 +18,7 @@
   <description>Nuxeo Core: Chemistry OpenCMIS Implementation</description>
 
   <properties>
-    <nuxeo.version>5.4.1.1-SNAPSHOT</nuxeo.version>
+    <nuxeo.version>5.4.1.1-HF05</nuxeo.version>
     <chemistry.opencmis.version>0.2.0-incubating-r1031674</chemistry.opencmis.version>
   </properties>
 
