--- a/nuxeo-platform-document-routing-api/pom.xml
+++ b/nuxeo-platform-document-routing-api/pom.xml
@@ -22,5 +22,9 @@
       <groupId>org.nuxeo.ecm.automation</groupId>
       <artifactId>nuxeo-automation-core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-platform-comment-api</artifactId>
+    </dependency>
   </dependencies>
 </project>
