--- a/nuxeo-platform-document-routing-core/pom.xml
+++ b/nuxeo-platform-document-routing-core/pom.xml
@@ -26,7 +26,10 @@
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-usermanager-api</artifactId>
     </dependency>
-
+    <dependency>
+      <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-platform-comment-api</artifactId>
+    </dependency>
     <!-- test deps -->
     <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
