--- a/nuxeo-launcher-commons/pom.xml
+++ b/nuxeo-launcher-commons/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.nuxeo.runtime</groupId>
     <artifactId>nuxeo-runtime-parent</artifactId>
-    <version>5.4.1.1-SNAPSHOT</version>
+    <version>5.4.1-HF05</version>
   </parent>
 
   <artifactId>nuxeo-launcher-commons</artifactId>
