--- a/nuxeo-distribution-jetty/pom.xml
+++ b/nuxeo-distribution-jetty/pom.xml
@@ -1,6 +1,4 @@
-<project
-  xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
@@ -13,8 +11,8 @@
 
   <artifactId>nuxeo-distribution-jetty</artifactId>
   <packaging>pom</packaging>
-  <name>Nuxeo Jetty Distribution</name>
-  <description>Package Nuxeo CAP or DM into Jetty</description>
+  <name>DEPRECATED - Nuxeo Jetty Distribution</name>
+  <description>DEPRECATED - Package Nuxeo CAP or DM into Jetty</description>
 
   <dependencyManagement>
     <dependencies>
