--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,4 @@
-<project
-  xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
@@ -55,27 +53,6 @@
       </modules>
     </profile>
     <profile>
-      <!-- Build Jetty distributions -->
-      <id>jetty</id>
-      <modules>
-        <module>nuxeo-distribution-cap</module>
-        <module>nuxeo-distribution-dm</module>
-        <module>nuxeo-distribution-base</module>
-        <module>nuxeo-distribution-server</module>
-        <module>nuxeo-distribution-jetty</module>
-      </modules>
-    </profile>
-    <profile>
-      <id>gf3</id>
-      <modules>
-        <module>nuxeo-distribution-cap</module>
-        <module>nuxeo-distribution-dm</module>
-        <module>nuxeo-distribution-base</module>
-        <module>nuxeo-distribution-server</module>
-        <module>nuxeo-distribution-gf3</module>
-      </modules>
-    </profile>
-    <profile>
       <id>tomcat</id>
       <modules>
         <module>nuxeo-distribution-cap</module>
@@ -95,9 +72,6 @@
         <module>nuxeo-distribution-dm</module>
         <module>nuxeo-distribution-jboss</module>
         <module>nuxeo-distribution-tomcat</module>
-        <module>nuxeo-distribution-server</module>
-        <module>nuxeo-distribution-jetty</module>
-        <module>nuxeo-distribution-jetty-base</module>
       </modules>
     </profile>
     <profile>
@@ -170,20 +144,6 @@
         <version>${nuxeo.distribution.version}</version>
         <type>zip</type>
         <classifier>nuxeo-cap</classifier>
-      </dependency>
-      <dependency>
-        <groupId>org.nuxeo.ecm.distribution</groupId>
-        <artifactId>nuxeo-distribution-jetty</artifactId>
-        <version>${nuxeo.distribution.version}</version>
-        <type>zip</type>
-        <classifier>nuxeo-cap</classifier>
-      </dependency>
-      <dependency>
-        <groupId>org.nuxeo.ecm.distribution</groupId>
-        <artifactId>nuxeo-distribution-jetty</artifactId>
-        <version>${nuxeo.distribution.version}</version>
-        <type>zip</type>
-        <classifier>nuxeo-dm</classifier>
       </dependency>
       <dependency>
         <groupId>org.nuxeo.ecm.distribution</groupId>
